Auth huma migration
